compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__custom_types__zero_arity_const.snap
---
source: compiler-core/src/fsharp/tests/custom_types.rs
assertion_line: 22
expression: "\ntype Mine {\n    This\n    ThatOneIsAMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchLongerVariant\n}\n\nconst this = This\nconst that = ThatOneIsAMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchLongerVariant\n"
---
module rec my.``mod``
type private Mine =
| ThatOneIsAMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchLongerVariant
| This
    
let private this = This
let private that = ThatOneIsAMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchLongerVariant
