compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__custom_types__zero_arity_literal.snap
---
source: compiler-core/src/fsharp/tests/custom_types.rs
expression: "\ntype Mine {\n    This\n    ThatOneIsAMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchLongerVariant\n}\n\nfn go() {\n    This\n    ThatOneIsAMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchLongerVariant\n}\n"
---
module rec my.``mod``

type private Mine =
| ThatOneIsAMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchLongerVariant
| This
    
let private go () = begin
    This
    ThatOneIsAMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchMuchLongerVariant
end
